--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@material/snackbar": "^14.0.0",
-    "chart.js": "^4.5.0"
+    "chart.js": "^4.5.0",
+    "material-components-web": "^14.0.0"
   }
 }
